web-app/src/components/Polaroid/Polaroid.scss
@import "../../theme/_index.scss";

.Polaroid {
  max-width: 500px;
  margin: 0 auto;
  display: block;

  user-drag: none;
  padding: 30px;
  padding-bottom: 50px;

  box-shadow: 0 3px 6px rgba(0, 0, 0, .25);
  border-radius: 5px;

  border-top: 0.5px solid whitesmoke;

  background-color: white;

  position: relative;
}

@keyframes developPolaroid {
  0% {
    filter: brightness(1%);
  }
  100% {
    filter: brightness(100%);
  }
}

.Polaroid__Image {
  width: 100%;
  user-select: none;

  pointer-events: none;
}

.Polaroid__Animation > .Polaroid__Image {
  animation: developPolaroid 2s linear;
}

.Polaroid__ZoomIcon {
  position: absolute;
  width: 25px;
  right: 40px;
  top: 40px;

  cursor: pointer;
}

.ReactModal__Overlay {
  z-index: 20;
}

.ReactModal__Content {
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;

  display: flex;

  border: none !important;
  background: transparent !important;

  flex-direction: column;

  align-items: center;
  justify-content: center;

  box-sizing: content-box !important;

  img {
    width: 100%;
    max-width: 75%;
    // height: 100%;
    cursor: pointer;
  }

  .Polaroid__Modal__CloseButton {
    width: 200px;
  }
}

.Polaroid__Bottom {
  text-align: right;
  margin-top: $margin * 2;

  span {
    cursor: pointer;
  }

  img {
    cursor: pointer;
    width: 20px;

    color: red;
  }
}

@include onMobile() {
  .ReactModal__Content {
    img {
      max-width: 100%;
    }
  }
}

